--- a/src/App.scss
+++ b/src/App.scss
@@ -71,3 +71,11 @@ div.footer{
   background-color:  rgb(210,210,210);
   padding: 1rem .25rem;
 }
+
+div.card {
+  margin: 1rem;
+  padding: 1rem;
+  border: solid 1px rgba(210,210,210,.5);
+  border-radius: .25rem;
+  box-shadow: 0 0 1rem rgba(210,210,210,.3);
+}
