--- a/src/App.scss
+++ b/src/App.scss
@@ -78,4 +78,8 @@ div.card {
   border: solid 1px rgba(210,210,210,.5);
   border-radius: .25rem;
   box-shadow: 0 0 1rem rgba(210,210,210,.3);
+  display: flex;
+  .details {
+    flex-grow: 1;
+  }
 }
