--- a/src/App.scss
+++ b/src/App.scss
@@ -83,3 +83,16 @@ div.card {
     flex-grow: 1;
   }
 }
+
+
+div {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  //transition: ;
+  color:rgb(33,33,33);
+  &.dark {
+    background-color:rgb(42,34,50);
+    color: white
+  }
+}
